2007-05-12  Aidan Kehoe  <kehoea@parhasard.net>

	* bytecomp.el (byte-compile-insert-header):
	Check for any Unicode escapes in the source file text when
	deciding whether Mule support is necessary for it, and whether to
	use escape-quoted as the .elc coding system. Thanks to Stephen for
	the suggestion as to how to ignore appearances in comments. 

2007-05-01  Stephen J. Turnbull  <stephen@xemacs.org>

	* dumped-lisp.el (preloaded-file-list): Move resize-minibuffer
	before simple.

	* resize-minibuffer.el: Remove CVS $Id: ChangeLog,v 1.794 2007/05/12 10:17:00 aidan Exp $ cookie..

	* resize-minibuffer.el (resize-minibuffer-mode): Remove autoload.

2007-04-30  Stephen J. Turnbull  <stephen@xemacs.org>

	* simple.el (raw-append-message):
	Improve resizing of echo area --- now obeys resize-minibuffer
	conventions.

	* resize-minibuffer.el (resize-minibuffer-idle-height): New.
	* simple.el (undisplay-echo-area-resize-window-allowed): New.
	* simple.el (undisplay-echo-area-resize-window): New.
	Add function to shrink echo area when idle.  (incomplete)

	* simple.el (log-message-ignore-regexps):
	* simple.el (undisplay-echo-area-function):
	* simple.el (clear-message):
	* simple.el (append-message):
	* simple.el (display-message):
	Improve docstrings.

2007-04-22  Aidan Kehoe  <kehoea@parhasard.net>

	* specifier.el (device-type-matches-spec):
	Add `msprinter' to the type of devices that are not window
	systems. 
	* specifier.el (derive-device-type-from-tag-set):
	Remove a superflous empty line. 
	* specifier.el (derive-device-type-from-locale-and-tag-set):
	If CURRENT-DEVICE is provided, only ever return its type (if it
	matches TAG-SET) or nil (if it doesn't).

2007-01-02  Aidan Kehoe  <kehoea@parhasard.net>

	* cus-face.el (custom-set-face-update-spec):
	Fix some formatting. 
	* faces.el (reset-face):
	reset-face resets other faces to behave like the default face--it
	shouldn't do anything if it's handed the default face. 
	* font-menu.el: